

RELEASE NOTES
=============


2.42.2 - January 25, 2010

    Updated the Logtalk compiler in order to allow checking for module
    predicate properties without requiring importing the predicates into
    "user" (note, however, that the module must still be loaded prior to
    the compilation of source files calling the module predicates).

    Updated the Logtalk runtime in order to support using the <</2 control
    construct in closure meta-arguments of meta-predicates.

    Added support for compiling Free/Goal lambda expression calls (by
    automatically generating an auxiliary predicate whenever possible).

    Added a compile_aux_clauses/1 public method, based on a predicate with
    the same name in SWI-Prolog, to the built-in object "logtalk". This
    method is usually called from goal_expansion/2 hooks in order to compile
    auxiliary clauses generated for supporting an expanded goal.

    Added the meta-predicate ignore/1, implemented by some Prolog compilers
    as a built-in predicate, as a Logtalk built-in method.

    Updated the SWI-Prolog config file in order to prevent the auto-loading
    of module libraries when querying predicate properties from Logtalk.

    Updated the Qu-Prolog, SICStus Prolog, and XSB config files in order
    to make available the predicate term_variables/2 as an ISO built-in
    predicate.

    Updated the Qu-Prolog integration scripts in order to double the heap size
    value for compiling the Logtalk compiler/runtime, solving a startup crash.

    Added predicates findall_member/4-5 to the library object "meta" (based
    on Richard O'Keefe's draft Prolog library proposal). Removed declaration
    and definition of the predicates callable/1 and ignore/1 from the library
    entities "metap" and "meta" (callable/1 is a built-in predicate in all
    supported Prolog compilers; ignore/1 is now a Logtalk built-in method).

    Added a library object, "meta_compiler", that can be used as an hook